redireccion de archivo

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                         </a>
                     </li>
                     <li class="presentacionLi">
-                        <a class="presentacionLink" href="./assets/documentos/cv_diegollanosr.pdf"
+                        <a class="presentacionLink" href="https://diegollanosr.github.io/assets/documentos/cv_diegollanosr.pdf"
                         target="_BLANK" download="cv_diegollanosr">
                         <i class="bi bi-file-earmark-pdf-fill"></i>
                          CV 
